update ourrea mock

--- a/ourrea/index.html
+++ b/ourrea/index.html
@@ -385,8 +385,7 @@
                 <div class="slick-list draggable">
 
                     <div class="hero-man d-none d-lg-block f-right" data-animation="jello" data-delay=".4s">
-                        <img
-                            src="assets/img/gallery/u0.png">
+                        <img src="assets/img/gallery/u0.png">
                     </div>
 
                     <div class="slick-track" style="opacity: 1; width: 3810px;">
@@ -877,15 +876,15 @@
 
                         <div class="about-img ">
                             <div class="about-font-img d-none d-lg-block">
-                                <img src="assets/img/gallery/xabout2.png.pagespeed.ic.6xSE4VgknV.webp" alt=""
+                                <img src="assets/img/gallery/u125.png" alt="" style="height:550px"
                                     data-pagespeed-url-hash="128965814"
                                     onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
                             </div>
-                            <div class="about-back-img ">
-                                <img src="assets/img/gallery/xabout1.png.pagespeed.ic.OSu4ZWGT0Q.webp" alt=""
+                            <!-- <div class="about-back-img ">
+                                <img src="assets/img/gallery/xabout1.png" alt=""
                                     data-pagespeed-url-hash="4129433189"
                                     onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
